# codexify-core

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  EXPORT_MANIFEST.txt  LICENSE  MANIFEST.in  Makefile  Makefile.docker  README.md  SECURITY.md  conftest.py  docker-compose.yml  guardian.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.in  pytest.ini  requirements.txt
Core/: .env.example  CORE_EXPORT_MANIFEST.json  docker-compose.yml  pyproject.toml
Core/backend/: Dockerfile  alembic.ini  migrations  run-server.sh
Core/backend/rag/: __init__.py  embedder.py  personal_fact_extraction.py
Core/backend/scripts/: ensure_embedding_model.py
Core/backend/tts_service/: __init__.py
Core/backend/vector_store/: __init__.py  chroma_store.py
Core/config/heartbeat/: heartbeat.schedule.example.json
Core/docs/Campaign/: CAMPAIGN_2026-05-01_001_PI_CODER_INTEGRATION.md  CAMPAIGN_2026_01_15_AUDIT_CORRECTIONS_CAMPAIGN_A.md  CAMPAIGN_2026_01_16_GUARDIAN_CHAT_SIDEBAR_POLISH.md  CAMPAIGN_2026_01_20_LOOP_CLOSURE_RAG.md  CAMPAIGN_2026_01_23_AUDIT_HARDENING_FOUNDATION.md  CAMPAIGN_2026_01_23_CORE_LOOP_ROADMAP.md  CAMPAIGN_2026_02_03_CODEXIFY_AUDIT.md  CAMPAIGN_2026_02_03_CODEX_RUNNER_AUDIT.md  CAMPAIGN_2026_02_03_RUNNER_AUDIT_OUTPUT.md  CAMPAIGN_2026_02_05_CODEXIFY_AUDIT_FOLLOWUP.md  CAMPAIGN_2026_02_06_GUARDIAN_PARITY_CONTROL_PLANE.md  CAMPAIGN_2026_02_06_LOOP_INTEGRITY_PLAN_ENV_AND_VALIDATION.md  CAMPAIGN_2026_02_08_TEMPORAL_MEMORY_INTEGRITY.md  CAMPAIGN_2026_02_11_SECURITY_BOUNDARY_HARDENING.md  CAMPAIGN_2026_02_15_2026_02_16_COMPILED_AUDIT.md  CAMPAIGN_2026_02_15_PHASE_CONTROLPLANE.md  CAMPAIGN_2026_02_16_AUDIT_2026_02_16_SECURITY_MVP_FOLLOWUP.md  CAMPAIGN_2026_02_16_AUDIT_2026_02_17_DERIVED_CAMPAIGNS.md  CAMPAIGN_2026_02_17_INFERENCE_PROVIDER_STATE_LEDGER.md  CAMPAIGN_2026_03_24_BETA_STABILIZATION.md  CAMPAIGN_FLOW_BUILDER_TYPED_SURFACE.md
Core/docs/architecture/: 00-current-state.md  2026-03-28-release-gate-proof.md  2026-03-31-rag-context-observability-proof.md  2026-03-31-rag-trace-e2e-proof.md  2026-03-31-source-selector-proof.md  2026-04-01-current-head-supported-path-proof.md  2026-04-01-deterministic-retrieval-proof.md  2026-04-04-migration-upgrade-proof.md  2026-04-05-import-enrichment-decoupling.md  2026-04-06-import-runtime-live-proof.md  2026-04-10-supported-path-proof.md  2026-04-15-supported-path-proof.md  2026-04-16-dmg-ritual-proof.md  2026-04-20-bounded-tool-augmented-completion-live-proof.md  2026-04-22-supported-path-proof.md  2026-05-04-live-supported-path-proof.md  2026-05-05-coding-result-return-path-live-proof.md  2026-05-05-supported-profile-live-proof.md  2026-05-08-supported-profile-live-proof.md  README.md  account-export-restore-contract.md  architecture-atlas.md  candidate-trace-surface.md  chat-runtime-state-contract.md  codex-entry-policy-hardening.md  codex-knowledge-compiler-contract.md  codexify-platform-readiness-audit.md  codexify_workspace_surface_spec_v_1.md  competitive-parity-audit.md  completion_pipeline.md  config-classification-and-consolidation-plan.md  core-code-reading-path.md  data-and-storage.md  delegation-operator-manual.md  delegation-runtime.md  diagram-governance.md  execution-ledger-gate-artifacts-contract.md  flow-builder-activity-proof-surface.md  flow-builder-runreceipt-persistence-model.md  flow-builder-testrun-activation-contract.md  (+23 more)
Core/docs/dev/: ARTIFACT1B—CODEXIFY-STRUCTURAL-LAYOUT-SPECIFICATION.md  ARTIFACT6—Federated-Context-Viewer.md  PGDB_REFACTOR_PLAN.md  SECURITY_HARDENING_PLAN.md
Core/docs/release/: RELEASE_CANDIDATE_EVIDENCE_2026-05-15.md  core-export-workflow.md  public-portal-snapshot-workflow.md
Core/docs/tasks/: TASK-2026-02-17-002.md  TASK-2026-05-01-001_pi_adapter.md  TASK-2026-05-01-002_route_wiring.md  TASK-2026-05-01-004_result_ingestion.md  (+97 more)
Core/frontend/: Dockerfile.prod  package-lock.json  pnpm-lock.yaml  ts-errors.txt
Core/guardian/: __main__.py  agent_task_queue.py  cache.py  character_switcher.py  codex_awareness.py  conftest.py  depth.py  desktop_linker.py  desktop_vault.py  guardian_api.py.old  guardian_loop.py  identity.py  imprint_zero.py  inspect_schema.py  patch_schema.py  plugin_loader.py  pulse_secretary.py  ritual_cli.py  self_check.py  sign_all.py  system_init.py  vector_store.py
Core/scripts/: audit_platform_readiness.py  audit_unity.py  compare_schemas.py  daily_audit.py  flow_schema_export.py  flows_smoke.py  list_routes.py  process_logs.ts  test_plugin_server.py
Core/src-tauri/: Cargo.toml  tauri.conf.json
Core/tests/: conftest.py  test_chat_payload_summary.py  test_flows_core.py  test_media_identity.py  test_personal_facts_crud.py  test_temporal_ordering.py  test_tool_intents.py
(+5862 files in other folders)
