[project]
name = "guardian_codex"
version = "0.1.0"
description = "PulseOS Guardian Backend"
authors = [
    { name="Catalyst Design Labs", email="dev@catalystlabs.ai" }
]
dependencies = [
    "fastapi",
    "httpx",
    "python-dotenv",
    "uvicorn",
    "PyYAML",
    "click",
    "pydantic",
    "pydantic-settings",
    "SQLAlchemy",
    "aiosqlite",
    "structlog",
    "importlib-metadata",
    "pluggy",
    "requests",
    "google-cloud-texttospeech",
    "typer>=0.12.3",
    "slowapi>=0.1.8",
    "prometheus-client>=0.20.0",
    "bcrypt",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "mcp",
    "notion-client",
    "markitdown",
]
tui = [
    "textual>=0.50,<1",
    "rich>=13",
]
rag = [
    "chromadb>=0.5",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.6",
    "numpy>=1.26",
    "openai>=1.0",
]

[project.scripts]
guardian = "guardian.cli.memoryos_cli:cli"
guardian-diag = "guardian.tui.diag_app:main"
guardian-main = "guardian.guardian_main:app"
# Launches guardian.guardian_api:app via guardian.server.run:main.
guardian-api = "guardian.server.run:main"
codexify = "scripts.chatgpt_import.cli_migrate:app"

[tool.setuptools.packages.find]
include = ["guardian", "memoryos"]

[tool.setuptools.package-data]
"guardian.prompts" = ["*.md", "*.txt", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  \.git
  | \.venv
  | build
  | dist
  | guardian\.egg-info
  | migrations
  | archive
  | .*_pb2\.py
)
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["guardian"]
skip = [
  ".venv",
  "build",
  "dist",
  "guardian.egg-info",
  "migrations",
  "archive"
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
markers = ["asyncio"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88           # match Black
extend-ignore = ["E203"]

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["E402", "F841"]
"guardian/plugins/**/tests/**/*.py" = ["E402"]

[tool.mypy]
# Prevent mypy from treating repo root as a package (fixes "Source file found twice" error)
# The repo root has __init__.py but guardian/ is the actual package root
explicit_package_bases = true
mypy_path = "."
packages = ["guardian", "tests", "scripts", "backend"]
ignore_missing_imports = true
# MVP: Less strict type checking - enable stricter settings as codebase improves
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
no_implicit_optional = false
strict = false
# MVP: Disable error codes for issues that need gradual cleanup
# Remove these as the codebase type coverage improves
disable_error_code = [
    "name-defined",    # Missing imports/definitions - common in dynamic code
    "attr-defined",    # Attribute access issues
    "arg-type",        # Argument type mismatches
    "return-value",    # Return type mismatches
    "assignment",      # Assignment type mismatches
    "misc",            # Various issues including type assignments
    "valid-type",      # Invalid type annotations
    "var-annotated",   # Missing type annotations for variables
    "call-arg",        # Missing/extra arguments
    "no-redef",        # Name redefinition
    "func-returns-value",  # Function returns value issues
    "index",           # Indexing issues
    "operator",        # Operator type issues
    "union-attr",      # Optional attribute access
    "import",          # Missing stubs
    "truthy-function", # Function always true in boolean context
    "dict-item",       # Dict entry type mismatches
    "override",        # Signature incompatible with supertype
    "used-before-def", # Variable used before definition
    "abstract",        # Cannot instantiate abstract class
    "return",          # Missing return statement
    "unused-coroutine", # Coroutine not awaited
]
# Exclude files/directories that shouldn't be type-checked
exclude = [
    "^venv/",
    "^\\.venv/",
    "^build/",
    "^dist/",
    "^docs/",
    "^\\.github/",  # Not a valid Python package name
    "^GitHub/",     # Spurious directory with __init__.py
    "^requirements/",  # Not meant to be a package
    "^data/",          # Data files, not code
    "^flows/",         # Config/workflow files
    "^codex_memory/",  # Excluded from packages list
    "^frontend/",      # Frontend is TypeScript, not Python
]
